--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,17 @@
-@charset "UTF-8";
 .header .navigation_bar {
   background: rgba(33, 33, 33, 0.8);
 }
+
 .header img {
   max-width: 145px;
 }
+
 .header .tophead {
   background: #1b200a;
   padding-bottom: 10px;
   padding-top: 10px;
 }
+
 .header .tophead a {
   color: #fff;
   text-decoration: none;
@@ -17,23 +19,53 @@
   margin-bottom: 1px;
   font-size: 14px;
 }
-.header .tophead a::before {
-  font-family: FontAwesome;
-  content: "";
-  margin-right: 14px;
-  color: #fff;
-  font-size: 13px;
+
+.header .tophead li {
+  display: inline;
+  margin-left: 15px;
 }
+
+.header .tophead .navbar-nav {
+  display: block;
+}
+
 .header .movenavebar a {
   color: #FFF;
   text-decoration: none;
   margin-left: 40px;
   font-size: 14px;
 }
+
 .header .movenavebar .active {
   background: #878787;
   border-radius: 7px;
   padding: 10px;
+}
+
+.header .movenavebar .dropdwnbt {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #FFFFFF;
+  font-size: 14px;
+}
+
+.header .movenavebar .dropdown-menu {
+  background-color: #212121;
+}
+
+.header .movenavebar .dropdown-menu li {
+  margin-left: 0px;
+}
+
+.header .movenavebar .dropdown-menu a {
+  margin-left: 0px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.header .movenavebar li {
+  margin-left: 26px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -44,61 +76,74 @@
     top: 59px;
     background: rgba(33, 33, 33, 0.8);
   }
-
   .header .movenavebar li {
     margin-bottom: 15px;
+    margin-top: 15px;
   }
 }
+
 .footer {
   background-color: #303030;
   font-size: 16px;
   color: #fff;
 }
+
 .footer img {
   max-width: 145px;
 }
+
 .footer a {
   text-decoration: none;
   color: #fff;
   opacity: 0.7;
 }
+
 .footer a:hover {
   color: #fff;
 }
+
 .footer .address .num::before {
   font-family: FontAwesome;
-  content: "";
+  content: "\f095";
   margin-right: 14px;
   color: #fff;
   font-size: 16px;
 }
+
 .footer .address .add::before {
   font-family: FontAwesome;
-  content: "";
+  content: "\f041";
   margin-right: 14px;
   color: #fff;
   font-size: 16px;
 }
+
 .footer .address .gamil::before {
   font-family: FontAwesome;
-  content: "";
+  content: "\f003";
   margin-right: 14px;
   color: #fff;
   font-size: 16px;
 }
+
 .footer .social a {
   border: 2px solid;
   padding: 10px;
   border-radius: 41px;
   margin-right: 5px;
   font-weight: bolder;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   width: 49px;
 }
+
 .footer .social a:hover {
   opacity: 1;
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
+
 .footer h5 {
   opacity: 0.7;
   font-size: 16px;
@@ -109,9 +154,11 @@
   position: relative;
   margin-top: -104px;
 }
+
 .homegif h2 {
   font-weight: 700;
-  transform: translate(-50%, 0px);
+  -webkit-transform: translate(-50%, 0px);
+          transform: translate(-50%, 0px);
   left: 50%;
   color: #fff;
   position: absolute;
@@ -119,6 +166,7 @@
   font-size: 36px;
   text-align: center;
 }
+
 .homegif img {
   width: 100%;
 }
@@ -127,25 +175,28 @@
   .homegif {
     margin-top: -63px;
   }
-
   .homegif h2 {
     font-size: 13px;
   }
 }
+
 .contentsection h2 {
   color: #939393;
   font-size: 24px;
   font-weight: bold;
 }
+
 .contentsection h1 {
   color: #333333;
   font-size: 46px;
   font-weight: bold;
 }
+
 .contentsection p {
   color: #666666;
   font-size: 16px;
 }
+
 .contentsection a {
   font-size: 14px;
   background: #ED450A 0% 0% no-repeat padding-box;
@@ -155,24 +206,31 @@
   text-decoration: none;
   padding: 13px 19px;
 }
+
 .contentsection img {
   width: 100%;
-  filter: saturate(0);
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
 }
+
 .contentsection img:hover {
-  filter: saturate(1);
+  -webkit-filter: saturate(1);
+          filter: saturate(1);
 }
+
 .contentsection a:hover {
   color: #ED450A;
   border: 1px dotted #ED450A;
   background-color: #fff;
 }
+
 .contentsection .sahpinside {
   position: relative;
   padding-left: 47px;
   padding-bottom: 47px;
   padding-right: 47px;
 }
+
 .contentsection .sahpinside .shape {
   width: 25vw;
   height: 25vh;
@@ -182,6 +240,7 @@
   bottom: 0;
   left: 0;
 }
+
 .technologybeyond {
   height: 45vh;
   background-position: center;
@@ -189,12 +248,14 @@
   background-size: cover;
   position: relative;
 }
+
 .technologybeyond h4 {
   font-size: 36px;
   position: absolute;
   bottom: 5vh;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   color: #FFF6F6;
   font-weight: 200;
   opacity: 1;
@@ -205,6 +266,7 @@
   width: 100%;
   border-radius: 8px;
 }
+
 .insights .col-md-5 img {
   width: 100%;
   height: 274px;
@@ -212,19 +274,23 @@
      object-fit: cover;
   border-radius: 8px;
 }
+
 .insights h1 {
   color: #BBBCB5;
   font-size: 14px;
 }
+
 .insights h2 {
   font-size: 22px;
   color: #333333;
   font-weight: bold;
 }
+
 .insights p {
   font-size: 14px;
   color: #666666;
 }
+
 .insights a {
   padding-bottom: 5px;
   color: #ED450A;
@@ -232,9 +298,11 @@
   text-decoration: none;
   padding-right: 24px;
 }
+
 .insights a:hover {
   color: #501703;
 }
+
 .insights .sociallike a {
   border: none;
   color: #666666;
@@ -249,11 +317,13 @@
   text-decoration: none;
   padding: 13px 19px;
 }
+
 .tophref a:hover {
   color: #ED450A;
   border: 1px dotted #ED450A;
   background-color: #fff;
 }
+
 .tophref h2 {
   font-style: normal;
   font-weight: bold;
@@ -261,6 +331,7 @@
   line-height: 58px;
   color: #333333;
 }
+
 .tophref h3 {
   font-style: normal;
   font-weight: bold;
@@ -271,6 +342,7 @@
 .homecarosel img {
   width: 100%;
 }
+
 .homecarosel .carousel-control-next, .homecarosel .carousel-control-prev {
   width: 50px;
   height: 50px;
@@ -281,29 +353,38 @@
   border: none;
   border-radius: 54px;
 }
+
 .homecarosel .carousel-control-next {
   right: 5px;
 }
+
 .homecarosel .carousel-inner {
   background: #FFFFFF;
   border: 1px solid #E5EAF4;
-  box-sizing: border-box;
-  box-shadow: 0px 10px 35px rgba(0, 0, 0, 0.03);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 10px 35px rgba(0, 0, 0, 0.03);
+          box-shadow: 0px 10px 35px rgba(0, 0, 0, 0.03);
   border-radius: 16px;
-  transform: translate(0%, -50%);
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
 }
+
 .homecarosel .content {
   padding: 15px;
 }
+
 .homecarosel .content img {
   width: 40px;
   border-radius: 45px;
 }
+
 .homecarosel .content h2 {
   font-size: 30px;
   color: #333333;
   font-weight: bold;
 }
+
 .homecarosel .content button {
   color: #ED450A;
   background: #f57e0f5c;
@@ -315,23 +396,27 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .homecarosel .content p {
   color: #5A7184;
   font-size: 18px;
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .homecarosel .content span {
   color: #5A7184;
   font-size: 16px;
   font-weight: 600;
 }
+
 .homecarosel .content h5 {
   line-height: 0.7;
   color: #183B56;
   font-size: 16px;
   margin-left: 19px;
 }
+
 .homecarosel .bgndimg {
   background-size: cover;
   background-repeat: no-repeat;
@@ -341,13 +426,18 @@
 .childrens {
   position: relative;
 }
+
 .childrens img {
   width: 100%;
-  filter: saturate(0);
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
 }
+
 .childrens img:hover {
-  filter: saturate(1);
+  -webkit-filter: saturate(1);
+          filter: saturate(1);
 }
+
 .childrens .chilbotcontent {
   padding: 55px;
   background: #FFFFFFCC 0% 0% no-repeat padding-box;
@@ -357,8 +447,10 @@
   bottom: 0;
   text-align: center;
   left: 50%;
-  transform: translate(-50%, -60px);
+  -webkit-transform: translate(-50%, -60px);
+          transform: translate(-50%, -60px);
 }
+
 .childrens .chilbotcontent a {
   font-size: 14px;
   background: #ED450A 0% 0% no-repeat padding-box;
@@ -368,6 +460,7 @@
   text-decoration: none;
   padding: 13px 19px;
 }
+
 .childrens .chilbotcontent a:hover {
   color: #ED450A;
   border: 1px dotted #ED450A;
@@ -382,23 +475,24 @@
   .space {
     height: 191px;
   }
-
   .childrens {
     display: none;
   }
-
   .technologybeyond {
     background-size: auto;
   }
 }
+
 .c-gray {
-  filter: saturate(0);
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
 }
 
 .insights_single .leftmain img {
   width: 100%;
   border-radius: 8px;
 }
+
 .insights_single .col-md-3 img {
   width: 100%;
   height: 274px;
@@ -406,19 +500,23 @@
      object-fit: cover;
   border-radius: 8px;
 }
+
 .insights_single h1 {
   color: #BBBCB5;
   font-size: 14px;
 }
+
 .insights_single h2 {
   font-size: 22px;
   color: #333333;
   font-weight: bold;
 }
+
 .insights_single p {
   font-size: 14px;
   color: #666666;
 }
+
 .insights_single a {
   padding-bottom: 5px;
   color: #ED450A;
@@ -426,13 +524,16 @@
   text-decoration: none;
   padding-right: 24px;
 }
+
 .insights_single a:hover {
   color: #501703;
 }
+
 .insights_single .sociallike a {
   border: none;
   color: #666666;
 }
+
 .insights_single .d-flex {
   margin-top: 14%;
 }
@@ -446,6 +547,7 @@
   outline: none;
   border: none;
 }
+
 .prev_next_insight button:hover {
   background: #BBBCB5 0% 0% no-repeat padding-box;
 }
@@ -460,6 +562,47 @@
   border-top-right-radius: 5px;
   overflow: hidden;
 }
+
 .cronic img {
   width: 100%;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.cardc {
+  text-align: center;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.03);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.03);
+  padding-bottom: 10px;
+}
+
+.cardc img {
+  width: 100%;
+}
+
+.cardc h5 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #000000;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cardc h6 {
+  font-size: 14px;
+  font-weight: normal;
+  color: #939393;
+}
+
+.csractiv h6 {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.csractiv img {
+  width: 100%;
+}
+
+.career img {
+  width: 100%;
+}
+/*# sourceMappingURL=style.css.map */
