--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,13 +23,15 @@ $litegray:#666666;
             font-size:$fontsizesamll ;
 
         }
-        a::before{
-            font-family: FontAwesome;
-            content: "\f003";
-            margin-right: 14px;
-            color: #fff;
-            font-size: 13px;
+        li{
+            display: inline;
+            margin-left: 15px;
         }
+        .navbar-nav{
+            display: block;
+        }
+       
+       
 
 
     }
@@ -45,6 +47,28 @@ $litegray:#666666;
             border-radius: 7px;
             padding: 10px;;
         }
+        .dropdwnbt{
+            background-color: transparent;
+            border: none;
+            outline: none;
+            color: #FFFFFF;
+            font-size: 14px;
+        }
+        .dropdown-menu{
+            background-color: #212121;
+            li{
+                margin-left: 0px;
+            }
+        }
+        .dropdown-menu a{
+            margin-left: 0px;
+            color: #fff;
+            font-size: 16px;
+        }
+        li{
+            margin-left: 26px;
+        }
+    
     }
 
    
@@ -60,6 +84,8 @@ $litegray:#666666;
     }
     .header .movenavebar li{
         margin-bottom: 15px;
+        margin-top: 15px;
+
     }
   
 }
@@ -563,4 +589,37 @@ $litegray:#666666;
     img{
         width: 100%;
     }
+}
+.cardc{
+    text-align: center;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.03);
+    padding-bottom: 10px;
+    img{width: 100%;}
+    h5{
+    font-size: 16px;
+    font-weight: 600;
+    color: #000000;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    }
+    h6{
+        font-size: 14px;
+        font-weight: normal;
+        color:#939393;
+       
+    }
+    
+}
+.csractiv{
+    h6{
+        font-weight: 600;
+        font-size:24px;
+    }
+    img{
+        width: 100%;
+    }
+}
+.career{
+    img{width: 100%;}
 }
