--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,7 +4,12 @@ $medaumfonsize:16px;
 $graycolor:#939393;
 $darkgray:#333333;
 $litegray:#666666;
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+body{
+    font-family: 'Titillium Web', sans-serif!important;
+}
 .header{
+    
     .navigation_bar{        
         background: rgba(33, 33, 33, 0.8);
     }
@@ -68,7 +73,14 @@ $litegray:#666666;
         li{
             margin-left: 26px;
         }
+        .dropdown-item:focus{
+            background-color: #4d4d4d;
+        }
+        .dropdown-item:hover{
+            background-color: #4d4d4d;
+        }
     
+
     }
 
    
@@ -93,6 +105,7 @@ $litegray:#666666;
     background-color: $mainbackcolor;
     font-size:$medaumfonsize;
     color: #fff;
+    
     img{
         max-width: 145px;
 
@@ -133,26 +146,57 @@ $litegray:#666666;
         
 
     }
+    .Enterprise{
+        font-size:14px;
+        margin-top: 10px;
+
+    }
     .social{
         a{
-            border: 2px solid;
-            padding: 10px;
-            border-radius: 41px;
-            margin-right: 5px;
-            font-weight: bolder;
-            display: inline-flex;
-            width: 49px;
+          
         }
         a:hover{
             opacity: 1;
             transform: scale(1.1);
+        }
+        .fa{
+            margin-right: 11px;
+            font-size: 20px;
         }
     }
     
     h5{
         opacity: 0.7;
         font-size: $medaumfonsize;
+       
+    }
+    .topline{
+        padding-bottom: 10px;
+        padding-top: 10px;
+        a{
+            color: #fff;
+            text-decoration: none;
+            margin-top: 1px;
+            margin-bottom:1px;
+            font-size:$fontsizesamll ;
 
+        }
+        li{
+            display: inline;
+            margin-left: 15px;
+        }
+        .navbar-nav{
+            display: block;
+        }
+       
+       
+
+
+    }
+    .lastfooter{
+        ul{
+
+        }
     }
     
 }
@@ -875,5 +919,116 @@ $litegray:#666666;
     background-size: cover;
     background-repeat: no-repeat;
 }
+.singe_indight{
+    img{
+        width:100%;
+    }
+    p{
+        font-size:16px;
+        text-align: justify
+    }
+    button{
+        border-radius: 5px;
+        margin-left: 10px;
+        outline:none;
+        border:0px;
+        padding:6px 10px;
+    }
+    .yellobtn{background: #F4D27A;
 
-    
+
+    }
+    .greenbtn{
+        background: #88E5A2;
+
+    }
+}
+.chriniclesinnerpage {
+    .carde{
+        img{
+            width: 50px;
+            border-radius: 50px;
+            margin-right: 10px;
+        }
+        h5{
+            color: #183B56;
+            font-weight: bold;
+            font-size:16px;
+        }
+        p{
+            text-align: justify;
+        }
+
+    }
+   
+}
+.careersingle{
+    h5{
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 32px;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+        color: #898282;
+    }
+    h1{
+        font-style: normal;
+        font-weight: 600;
+        font-size: 35px;
+        line-height: 40px;
+        color: #333333;
+    }
+    h2{        
+        font-weight: 600;
+        font-size: 22px;
+        line-height: 25px;
+        color: #333333;
+    }
+    p{
+        text-align:justify;
+    }
+    .backgray{
+        background: #F5F5F5;
+        padding: 40px;
+        h6{
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 21px;
+            color: #333333;
+
+        }
+        h4{
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 21px;
+            color: #6F6F6F;
+
+        }
+        button{
+            background-color: #000;
+            color:#fff;
+            outline: none;
+            border: none;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 16px;
+            padding: 10px 20px;
+        }
+        .ceterincol-4{
+            border-left: 1px dashed #CB4C22;
+            border-right: 1px dashed #CB4C22;
+
+            .inside{
+                margin-left: 50%;
+                transform: translate(-50%, 0px);
+            }
+           
+        }
+
+
+
+        
+    }
+}
