--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 body {
   font-family: "Titillium Web", sans-serif !important;
+ 
 }
 
 .header .navigation_bar {
@@ -71,6 +72,7 @@ body {
 
 .header .movenavebar li {
   margin-left: 26px;
+ 
 }
 
 .header .movenavebar .dropdown-item:focus {
@@ -186,6 +188,7 @@ body {
   z-index: -1;
   position: relative;
   margin-top: -104px;
+  overflow: hidden;
 }
 
 .homegif h2 {
